--- a/src/app/components/model/model.component.html
+++ b/src/app/components/model/model.component.html
@@ -81,7 +81,7 @@
 
               <div class="form_btns">
                 <button class="btn cancel_btn" type="button" (click)="endAddingNewField()"> CANCEL</button>
-                <button class="btn" type="submit" [disabled]="!form.valid"> SUBMIT</button>
+                <button class="btn" type="submit" [disabled]="!form.valid">SUBMIT</button>
               </div>
 
 
@@ -89,7 +89,7 @@
           </div>
 
         } @else {
-          <div class="btn" (click)="startAddingNewField()"> Add field</div>
+          <div class="btn" (click)="startAddingNewField()"> <span class="material-symbols-outlined icon">add</span> Add new field</div>
         }
 
       </div>
