--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,10 +8,21 @@
 }
 
 #datasets {
-  flex: 1;
+  position: relative;
   height: 100%;
-  background-color: #e4d6ec;
   padding: 0;
+  border-right: 1px solid white ;
+
+  &.expanded {
+    flex:1;
+    max-width: 300px;
+    background-color: #e4d6ec;
+  }
+
+  &.collapsed {
+    width: 45px;
+    background-color: blueviolet;
+  }
 
   .dataset_title {
     display: flex;
@@ -89,8 +100,20 @@
 }
 
 #models {
-  flex: 3;
+  position: relative;
   height: 100%;
+  border-right: 1px solid white ;
+
+  &.expanded {
+    flex:3;
+    max-width: 900px;
+  }
+
+  &.collapsed {
+    width: 45px;
+    background-color: blueviolet;
+
+  }
 
   .model_list {
     display: flex;
@@ -104,10 +127,42 @@
 }
 
 #mappings {
-  flex: 4;
+  position: relative;
   height: 100%;
   background-color:  #e4d6ec;
+
+  &.expanded {
+    flex:3;
+  }
+
+  &.collapsed {
+    width: 45px;
+    background-color: blueviolet;
+    border-right: 1px solid white ;
+  }
+
+  .mapping_list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 40px;
+
+    .dataset_selector {
+      position: relative;
+
+      .label {
+        position: absolute;
+        top: -15px;
+        left: 4px;
+        font-size: 0.7rem;
+        color: blueviolet;
+
+      }
+    }
+  }
 }
+
 #add_data_form {
   width: 100%;
   height: 100%;
@@ -152,5 +207,45 @@
 
   &.visible {
     top:0;
+  }
+}
+
+.collapse_icon {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  color: white;
+  font-size: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #cd71f3;
+
+  span {
+    cursor: pointer;
+  }
+
+  &.border_left {
+    border-left: 1px solid white;
+  }
+
+  &.border_right {
+    border-right: 1px solid white;
+  }
+
+}
+
+.vertical_title {
+  position: absolute;
+  top: 40%;
+  text-align: center;
+  transform: rotate(-90deg);
+  color: white;
+  font-weight: bold;
+  height: 45px;
+
+  &.up {
+    left: -5px;
   }
 }
