--- a/src/app/components/title-bloc/title-bloc.component.css
+++ b/src/app/components/title-bloc/title-bloc.component.css
@@ -5,6 +5,7 @@
   color: white;
   margin: 0;
   padding-left: 5px;
+  height: 40px;
 
   background-color: blueviolet;
 
@@ -13,18 +14,23 @@
     align-items: center;
 
     gap: 2px;
+
+    .title_value {
+      font-weight: bold;
+      padding-top: 4px;
+    }
     .icon {
       color: white;
-      font-size: 2.5rem;
+      font-size: 2rem;
     }
   }
 
 
   .add_icon {
-    font-size: 4rem;
+    font-size: 3rem;
     cursor: pointer;
-    height: 60px;
-    width:  60px;
+    height: 40px;
+    width:  40px;
     background-color: #a4f6ca;
     color: blueviolet;
 
