--- a/src/app/components/title-bloc/title-bloc.component.html
+++ b/src/app/components/title-bloc/title-bloc.component.html
@@ -1,10 +1,12 @@
 <div class="title_bloc">
   <div class="title">
     <span class="material-symbols-outlined icon" >{{ icon() }}</span>
-    <h3>{{ title() }}</h3>
+    @if (!collapsed()) {
+      <span class="title_value">{{ title() }}</span>
+    }
   </div>
 
-  @if(canAdd()) {
+  @if(canAdd() && !collapsed()) {
     <span class="material-symbols-outlined add_icon" (click)="add.emit()">add</span>
   }
 </div>
