--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-html {
-  height: 100%;
-  scroll-behavior: smooth;
-}
 
-body {
-  margin: 0;
-  font-family: sans-serif;
-}
 
 form {
   display: flex;
@@ -84,3 +76,6 @@ select:focus {
   cursor: default;
   border: 1px solid gray;
 }
+
+html, body { height: 100%;  scroll-behavior: smooth;}
+body { margin: 0; font-family: sans-serif; }
